--- a/index.html
+++ b/index.html
@@ -60,15 +60,31 @@
 				</div>
 			</div>
 			<div class="section section2">
-				<h3>能力介绍</h3>
-				<div class="course">
-					<p>
-						您好,我叫张广林,来自山西运城。我的专业是信息与计算科学,我要应聘的岗位是前端工程师,我学习过PS,可以
-					自己进行一些切图以及简单的P图,也学习过交互,明白交互的流程,可以很好的与设计师进行交接,可以写出响应式
-					页面,移动端页面以及PC端页面,也学习过后台的知识,可以无障碍的与后端工程师进行工作的交接。
-					</p>
-					<p>进入这个行业的最大一个原因就是因为薪资,能吃苦耐劳,只要BOSS发话,加班之类的在下愿效犬马之劳。</p>
+				<div class="slide">
+					<h3>能力介绍</h3>
+					<div class="course">
+						<p>
+							您好,我叫张广林,来自山西运城。我的专业是信息与计算科学,我要应聘的岗位是前端工程师,我学习过PS,可以
+						自己进行一些切图以及简单的P图,也学习过交互,明白交互的流程,可以很好的与设计师进行交接,可以写出响应式
+						页面,移动端页面以及PC端页面,也学习过后台的知识,可以无障碍的与后端工程师进行工作的交接。
+						</p>
+						<p>进入这个行业的最大一个原因就是因为薪资,能吃苦耐劳,只要BOSS发话,加班之类的在下愿效犬马之劳。</p>
+					</div>
 				</div>
+		        <div class="slide">
+		        	<h3>我的座右铭</h3>
+		        	<div class="study">
+		        		<p>Go big or go home.</p>
+		        	</div>
+		        </div>
+		        <div class="slide">
+		        	<h3>联系方式</h3>
+		        	<div class="contact">
+		        		<p>phone:19935628039(同微信)</p>
+			        	<p>QQ:1637718415</p>
+			        	<p>很期待可以与您共事</p>
+		        	</div>
+		        </div>
 			</div>
 			<div class="section section3">
 				<h3>skills</h3>
